--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <div class="navbar-header">
       <ul class="nav navbar-nav flex-row">
         <li class="nav-item mobile-menu d-md-none mr-auto">
-          <a class="nav-link nav-menu-main menu-toggle hidden-xs">
+          <a class="nav-link nav-menu-main menu-toggle hidden-xs" #toggleSidemenuId>
             <i class="ft-menu font-large-1"></i>
           </a>
         </li>
