--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <!-- Sidebar Content starts -->
-<div id="stackMenu" data-scroll-to-active="true" class="main-menu menu-fixed menu-light menu-accordion">
+<div id="stackMenu" (click)="toggleSideBarMenu()" data-scroll-to-active="true" class="main-menu menu-fixed menu-light menu-accordion">
     <div class="main-menu-content">
         <ul *ngIf="userRole !=null " id="main-menu-navigation" data-menu="menu-navigation" class="navigation navigation-main">
             <li class="nav-item" routerLinkActive="active">
