--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -3,9 +3,9 @@
     <div class="content-header row">
     </div>
     <div class="content-body">
-      <section class="flexbox-container">
+      <section class="row flexbox-container">
         <div class="col-12 d-flex align-items-center justify-content-center">
-          <div class="col-md-4 col-12 box-shadow-2 p-0">
+          <div class="col-12 col-md-4 box-shadow-2 p-0">
             <div class="card border-grey border-lighten-3 m-0">
               <div class="card-header border-0">
                 <div class="card-title text-center">
@@ -48,13 +48,13 @@
                       </div>
                     </fieldset>
                     <div class="form-group row">
-                      <div class="col-md-6 col-12 text-center text-md-left">
+                      <div class="col-md-6 col-sm-6 col-12 text-center text-md-left">
                         <fieldset>
                           <input type="checkbox" id="remember-me" class="chk-remember">
                           <label for="remember-me"> Remember Me</label>
                         </fieldset>
                       </div>
-                      <div class="col-md-6 col-12 text-center text-md-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
+                      <div class="col-md-6 col-sm-6 col-12 text-center text-md-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
                     </div>
                     <button type="submit" [disabled]="!loginForm.form.valid" class="btn loycard-color btn-lg btn-block color-wh"><i class="ft-unlock"></i> Login</button>
                   </form>
